fixes to entites
