# biv-insurance-main/src/main/kotlin/ru/slivoviy/frog/insurance/logic/entity/Insurance.kt
@@ -7,6 +7,7 @@ import jakarta.persistence.Id
 import jakarta.persistence.OneToMany
 import jakarta.persistence.Table
 import org.hibernate.annotations.JdbcTypeCode
+import org.hibernate.proxy.HibernateProxy
 import org.hibernate.type.SqlTypes
 import java.time.OffsetDateTime
 import java.util.UUID
@@ -15,16 +16,37 @@ import java.util.UUID
 @Entity
 data class Insurance(
 
-    @Id
-    var id: UUID = UUID.randomUUID(),
+  @Id
+  var id: UUID = UUID.randomUUID(),
 
-    @Column(name = "name")
-    var name: String,
+  @Column(name = "name")
+  var name: String,
 
-    @OneToMany(fetch = FetchType.EAGER, mappedBy = "insurance")
-    var properties: MutableSet<Property>? = null,
+  @OneToMany(fetch = FetchType.LAZY, mappedBy = "insurance")
+  var properties: MutableSet<Property>? = null,
 
-    @JdbcTypeCode(SqlTypes.TIMESTAMP_WITH_TIMEZONE)
-    @Column(name = "created_at", nullable = false)
-    var createdAt: OffsetDateTime = OffsetDateTime.now()
-)
+  @JdbcTypeCode(SqlTypes.TIMESTAMP_WITH_TIMEZONE)
+  @Column(name = "created_at", nullable = false)
+  var createdAt: OffsetDateTime = OffsetDateTime.now()
+) {
+  final override fun equals(other: Any?): Boolean {
+    if (this === other) return true
+    if (other == null) return false
+    val oEffectiveClass =
+      if (other is HibernateProxy) other.hibernateLazyInitializer.persistentClass else other.javaClass
+    val thisEffectiveClass =
+      if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass else this.javaClass
+    if (thisEffectiveClass != oEffectiveClass) return false
+    other as Insurance
+
+    return id != null && id == other.id
+  }
+
+  final override fun hashCode(): Int =
+    if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass.hashCode() else javaClass.hashCode()
+
+  @Override
+  override fun toString(): String {
+    return this::class.simpleName + "(id = $id , name = $name , createdAt = $createdAt )"
+  }
+}
