# biv-insurance-main/src/main/kotlin/ru/slivoviy/frog/insurance/logic/entity/Rule.kt
@@ -9,6 +9,7 @@ import jakarta.persistence.ManyToOne
 import jakarta.persistence.OneToMany
 import jakarta.persistence.Table
 import org.hibernate.annotations.JdbcTypeCode
+import org.hibernate.proxy.HibernateProxy
 import org.hibernate.type.SqlTypes
 import java.util.UUID
 
@@ -17,20 +18,41 @@ import java.util.UUID
 @Entity
 data class Rule(
 
-    @Id
-    var id: UUID = UUID.randomUUID(),
+  @Id
+  var id: UUID = UUID.randomUUID(),
 
-    @Column(name = "type", nullable = false)
-    var type: String,
+  @Column(name = "type", nullable = false)
+  var type: String,
 
-    @JdbcTypeCode(SqlTypes.JSON)
-    @Column(name = "value", nullable = false)
-    var value: String,
+  @JdbcTypeCode(SqlTypes.JSON)
+  @Column(name = "value", nullable = false)
+  var value: String,
 
-    @OneToMany(fetch = FetchType.LAZY, mappedBy = "rule")
-    var properties: MutableSet<Property> = mutableSetOf(),
+  @OneToMany(fetch = FetchType.LAZY, mappedBy = "rule")
+  var properties: MutableSet<Property> = mutableSetOf(),
 
-    @ManyToOne(fetch = FetchType.LAZY)
-    @JoinColumn(name = "property_id", nullable = false)
-    var property: Property,
-)
+  @ManyToOne(fetch = FetchType.LAZY)
+  @JoinColumn(name = "property_id", nullable = false)
+  var property: Property,
+) {
+  final override fun equals(other: Any?): Boolean {
+    if (this === other) return true
+    if (other == null) return false
+    val oEffectiveClass =
+      if (other is HibernateProxy) other.hibernateLazyInitializer.persistentClass else other.javaClass
+    val thisEffectiveClass =
+      if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass else this.javaClass
+    if (thisEffectiveClass != oEffectiveClass) return false
+    other as Rule
+
+    return id != null && id == other.id
+  }
+
+  final override fun hashCode(): Int =
+    if (this is HibernateProxy) this.hibernateLazyInitializer.persistentClass.hashCode() else javaClass.hashCode()
+
+  @Override
+  override fun toString(): String {
+    return this::class.simpleName + "(id = $id , type = $type , value = $value )"
+  }
+}
